:sparkles: feat/api  add image to tweet
