# docs/swagger.json
@@ -382,6 +382,57 @@
                 }
             }
         },
+        "/tweets/{tweet_id}/upload-image": {
+            "post": {
+                "description": "Uploads an image and associates it with the given tweet",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Upload"
+                ],
+                "summary": "Upload an image for a tweet",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID of the tweet",
+                        "name": "tweet_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Image file to upload",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/uploaddto.UploadTweetImageRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apperror.AppError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apperror.AppError"
+                        }
+                    }
+                }
+            }
+        },
         "/users/follow": {
             "post": {
                 "produces": [
@@ -986,6 +1037,17 @@
                 }
             }
         },
+        "uploaddto.UploadTweetImageRes": {
+            "type": "object",
+            "properties": {
+                "image_url": {
+                    "type": "string"
+                },
+                "upload_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "user.SimpleResMessage": {
             "type": "object",
             "properties": {
@@ -1052,6 +1114,9 @@
                 "id": {
                     "type": "integer"
                 },
+                "image_url": {
+                    "type": "string"
+                },
                 "like_count": {
                     "type": "integer"
                 },
@@ -1083,6 +1148,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "image_url": {
+                    "type": "string"
                 },
                 "like_count": {
                     "type": "integer"
