# internal/modules/tweet/model.go
@@ -6,6 +6,7 @@ type Tweet struct {
 	ID        int64     `json:"id"`
 	UserID    int64     `json:"user_id"`
 	Content   string    `json:"content"`
+	ImageURL  string    `json:"image_url"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
 	Tags      []Tag     `json:"tags"`
