# internal/modules/upload/dto/upload.dto.go
@@ -1,6 +1,9 @@
 package uploaddto
 
-import "time"
+import (
+	"mime/multipart"
+	"time"
+)
 
 type UploadResponse struct {
 	ID        int64     `json:"id"`
@@ -11,4 +14,14 @@ type UploadResponse struct {
 	Size      int64     `json:"size"`
 	CreatedAt time.Time `json:"created_at"`
 	URL       string    `json:"url"`
+}
+
+type UploadTweetImageRes struct {
+	UploadID int64  `json:"upload_id"`
+	ImageURL string `json:"image_url"`
+}
+
+type UploadTweetImageReq struct {
+	TweetID int64                 `form:"tweet_id" binding:"required"`
+	File    *multipart.FileHeader `form:"file" binding:"required"`
 }
