# internal/modules/user/dto/get_profile.go
@@ -18,5 +18,6 @@ type TweetForProfile struct {
 	DislikeCount  int64    `json:"dislike_count"`
 	ReplyCount    int64    `json:"reply_count"`
 	BookMarkCount int64    `json:"bookmark_count"`
+	ImageURL      *string  `json:"image_url"`
 	CreatedAt     string   `json:"created_at"`
 }
